SERVER-42067 Ensure key Ordering offset does not exceed the maximum number of compound index keys